Closed
Bug 1450520
Opened 7 years ago
Closed 7 years ago
flickering of Facebook blue bar
Categories
(Core :: Web Painting, defect)
Core
Web Painting
Tracking
()
VERIFIED
FIXED
mozilla61
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox59 | --- | unaffected |
| firefox60 | --- | unaffected |
| firefox61 | blocking | verified |
People
(Reporter: heycam, Assigned: mattwoodrow)
References
Details
(Keywords: regression)
Attachments
(3 files)
With a newly installed Firefox Nightly (2018-03-31) I'm getting flickering of the Facebook blue bar when mousing around the page. See the attached video.
| Reporter | ||
Updated•7 years ago
|
Summary: flicking of Facebook blue bar → flickering of Facebook blue bar
| Reporter | ||
Comment 1•7 years ago
|
||
Perhaps relatedly, I get similar flickering in the Bitwarden popup panel.
| Reporter | ||
Comment 2•7 years ago
|
||
| Assignee | ||
Comment 3•7 years ago
|
||
The previous attempt to disable retained-dl just for the scrolled frame didn't work, since we might have already decided not to rebuild OOF frames within the scrolled frame at the point that we added to the dirty area.
That results in the new list containing scrolled content, but not position:fixed content, and then the DAG no longer knows which is on top. It frequently gets it wrong, and things flicker.
Assignee: nobody → matt.woodrow
Attachment #8964222 -
Flags: review?(mstange)
Updated•7 years ago
|
Attachment #8964222 -
Flags: review?(mstange) → review+
Pushed by mwoodrow@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/0cb041700c38
Disable retained display lists when we have overlay scrollbars, as the z-index of the scrollbar changes between paints. r=mstange
Comment 6•7 years ago
|
||
Backed out for mochitest e-10s failures on layout/forms/test/test_bug1301290.html
Push with failures: https://treeherder.mozilla.org/#/jobs?repo=mozilla-inbound&revision=0cb041700c38f2f2a436252de179ac8ed6f299f3&filter-resultStatus=testfailed&filter-resultStatus=busted&filter-resultStatus=exception&filter-searchStr=e10s&selectedJob=171409741
Failure log: https://treeherder.mozilla.org/logviewer.html#?job_id=171409741&repo=mozilla-inbound&lineNumber=7939
Backout link: https://hg.mozilla.org/integration/mozilla-inbound/rev/1758267802e956446af295b0e6ef0b3bd4104a26
Flags: needinfo?(matt.woodrow)
Updated•7 years ago
|
Blocks: 1448841
status-firefox59:
--- → unaffected
status-firefox60:
--- → unaffected
status-firefox61:
--- → affected
status-firefox-esr52:
--- → unaffected
tracking-firefox61:
--- → blocking
Keywords: regression
Comment 7•7 years ago
|
||
I think bug 1450434 might be a dupe of this one.
| Assignee | ||
Comment 8•7 years ago
|
||
The new patch in bug 1450360 should fix this.
Flags: needinfo?(matt.woodrow)
| Comment hidden (obsolete) |
Comment 12•7 years ago
|
||
Bug 1451971 was filed to track the ESPN issue.
Status: NEW → RESOLVED
Closed: 7 years ago
Flags: needinfo?(matt.woodrow)
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
Updated•7 years ago
|
Flags: qe-verify+
Comment 13•7 years ago
|
||
Unfortunately, I could not reproduce the issue after several attempts on different builds (20180403100105; 20180403170332; 201804032200400) as well as Latest Nightly 61.0a1 by checking the Facebook bar, Bitwarden popup panel as well as following the STR provided in the duplicate bug 1450911.
Cameron: Can you please re-check the Facebook bar on the latest Nightly 61.0a1 build and confirm back the results? Any feedback regarding the flickering of the extensions (as you mentioned Bitwarden) would be also much appreciated.
Thank you.
Flags: needinfo?(cam)
| Reporter | ||
Comment 14•7 years ago
|
||
These are both fine now, thanks.
Status: RESOLVED → VERIFIED
Flags: needinfo?(cam)
Comment 15•7 years ago
|
||
Based on the feedback provided in Comment 14, I will close this issue as Verified Fixed.
Flags: qe-verify+
You need to log in
before you can comment on or make changes to this bug.
Description
•