Bug 1450520 - Disable retained display lists when we have overlay scrollbars, as the z-index of the scrollbar changes between paints. r=mstange